--- a/wiki/CommandLineDocumentation.wiki
+++ b/wiki/CommandLineDocumentation.wiki
@@ -7,7 +7,7 @@
 
 = SYNOPSIS: =
 
-        java -jar RapGreen.jar [command args]
+        java -jar RapGreen point jar command args
 
 = OPTIONS: =
 
