Edited wiki page CommandLineDocumentation through web user interface.

--- a/wiki/CommandLineDocumentation.wiki
+++ b/wiki/CommandLineDocumentation.wiki
@@ -1,4 +1,4 @@
-#labels command,line,documentation
+#labels command,line,documentation,Featured
 #Description of command line arguments
 
 = NAME: =
